Flex-wrap dots to avoid off-center appearance when wrapped

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,15 @@ html, body, #main-container {
   margin: 0
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #main-container {
   display: flex;
   align-items: center;
-  height: calc(100% - 40px);
 }
 
 #image-container {
@@ -35,12 +40,11 @@ html, body, #main-container {
 }
 
 #dots {
-  margin-top: 10px;
-  position: fixed;
-  left: 50%;
-  transform: translate(-50%);
+  margin: 10px 0px 10px 0px;
+  width: 80%;
   display: flex;
-  justify-content: space-between
+  justify-content: center;
+  flex-wrap: wrap
 }
 
 .dot, .active-dot {
@@ -49,7 +53,9 @@ html, body, #main-container {
   background-color: #bbb;
   border-radius: 5px;
   display: inline-block;
-  margin: 0px 15px 0px 15px;
+  margin: 5px 10px 5px 10px;
+  min-width: 10px;
+  min-height: 10px
 }
 
 .active-dot {
@@ -63,7 +69,7 @@ html, body, #main-container {
   }
 
   #image-container {
-    max-height: calc(100% - 50px);
+    max-height: calc(100% - 100px);
   }
 
   #display-image {
@@ -77,7 +83,9 @@ html, body, #main-container {
   .dot, .active-dot {
     height: 5px;
     width: 5px;
+    min-width: 5px;
+    min-height: 5px;
     border-radius: 2.5px;
-    margin: 0px 5px 0px 5px;
+    margin: 5px 5px 5px 5px;
   }
 }
